marketing-lead2loyalty/apps-lead2loyalty/ui.apps/src/main/content/jcr_root/apps/lead2loyalty/components/content/clientlibs/lead2loyalty-homepage/css/lead2loyalty.css
.mktoForm .mktoFieldWrap {
    display: flex;
}

.form-container {
    margin-top: 24px;
}

.form-container .mktoForm.mktoHasWidth.mktoLayoutLeft {
    font-size: 16px !important;
    width: 70% !important;
}

.form-container .mktoForm input[type=text],
.mktoForm input[type=url],
.mktoForm input[type=email],
.mktoForm input[type=tel],
.mktoForm input[type=number],
.mktoForm input[type=date],
.mktoForm textarea.mktoField,
.mktoForm select.mktoField {
    width: 300px !important;
}

.form-container .mktoForm label.mktoLabel {
    font-family: Roboto;
    font-size: 16px;
    font-weight: 400 !important;
    min-width: 200px;
    display: flex;
    justify-content: start;
    flex-direction: row-reverse;
}

.form-container .mktoForm .mktoFormRow {
    width: 100%;
}

.form-container .mktoForm .mktoButtonWrap.mktoSimple .mktoButton,
.form-container .mktoForm .mktoButtonWrap.mktoSimple .mktoButton:active {
    display: inline-block;
    font-weight: 400;
    text-align: center;
    vertical-align: middle;
    user-select: none;
    font-size: 1rem;
    line-height: 1.5;
    border-radius: 0.25rem;
    transition: color .15s ease-in-out, background-color .15s ease-in-out, border-color .15s ease-in-out, box-shadow .15s ease-in-out;
    color: #fff;
    background-color: #23272b;
    border-color: #1d2124;
    text-decoration: none;
    border: none;
    background-image: none;
    width: 160px;
}

.form-container #LbloptIn {
    width: 100% !important;
    margin: auto;
    padding-top: 0;
}

.form-container .mktoForm .mktoButtonWrap.mktoSimple .mktoButton:hover {
    border: none;
}

.form-container .mktoForm .mktoOffset {
    display: none;
}

.form-container .mktoButtonWrap {
    margin-left: 0 !important;
}

.form-container .mktoField {
    display: block;
    height: calc(1.5em + 0.75rem + 2px);
    padding: 0.375rem 0.75rem;
    font-size: 1rem;
    font-weight: 400;
    line-height: 1.5;
    color: #495057;
    background-color: #fff;
    background-clip: padding-box;
    border: 1px solid #ced4da;
    border-radius: 0.25rem;
    transition: border-color .15s ease-in-out, box-shadow .15s ease-in-out;
}

.mle--image img {
    width: 100%;
    height: 100%
}

$space-x: 8px;

// Margin top for desktop
.margin-top-zero {
    margin-top: 0;
}

.margin-top-x {
    margin-top: 8px;
}

.margin-top-2x {
    margin-top: 16px;
}

.margin-top-3x {
    margin-top: 24px;
}

.margin-top-4x {
    margin-top: 32px;
}

.margin-top-5x {
    margin-top: 40px;
}

.margin-top-6x {
    margin-top: 48px;
}

.margin-top-7x {
    margin-top: 56px;
}

.margin-top-8x {
    margin-top: 64px;
}

//Margin bottom for desktop
.margin-bottom-zero {
    margin-bottom: 0;
}

.margin-bottom-x {
    margin-bottom: 8px;
}

.margin-bottom-2x {
    margin-bottom: 16px;
}

.margin-bottom-3x {
    margin-bottom: 24px;
}

.margin-bottom-4x {
    margin-bottom: 32px;
}

.margin-bottom-5x {
    margin-bottom: 40px;
}

.margin-bottom-6x {
    margin-bottom: 48px;
}

.margin-bottom-7x {
    margin-bottom: 56px;
}

.margin-bottom-8x {
    margin-bottom: 64px;
}

// Margin left for desktop
.margin-left-zero {
    margin-left: 0;
}

.margin-left-x {
    margin-left: 8px;
}

.margin-left-2x {
    margin-left: 16px;
}

.margin-left-3x {
    margin-left: 24px;
}

.margin-left-4x {
    margin-left: 32px;
}

.margin-left-5x {
    margin-left: 40px;
}

.margin-left-6x {
    margin-left: 48px;
}

.margin-left-7x {
    margin-left: 56px;
}

.margin-left-8x {
    margin-left: 64px;
}

// Margin right for desktop
.margin-right-zero {
    margin-right: 0;
}

.margin-right-x {
    margin-right: 8px;
}

.margin-right-2x {
    margin-right: 16px;
}

.margin-right-3x {
    margin-right: 24px;
}

.margin-right-4x {
    margin-right: 32px;
}

.margin-right-5x {
    margin-right: 40px;
}

.margin-right-6x {
    margin-right: 48px;
}

.margin-right-7x {
    margin-right: 56px;
}

.margin-right-8x {
    margin-right: 64px;
}

// Padding top for desktop
.padding-top-zero {
    padding-top: 0;
}

.padding-top-x {
    padding-top: 8px;
}

.padding-top-2x {
    padding-top: 16px;
}

.padding-top-3x {
    padding-top: 24px;
}

.padding-top-4x {
    padding-top: 32px;
}

.padding-top-5x {
    padding-top: 40px;
}

.padding-top-6x {
    padding-top: 48px;
}

.padding-top-7x {
    padding-top: 56px;
}

.padding-top-8x {
    padding-top: 64px;
}

//padding bottom for desktop
.padding-bottom-zero {
    padding-bottom: 0;
}

.padding-bottom-x {
    padding-bottom: 8px;
}

.padding-bottom-2x {
    padding-bottom: 16px;
}

.padding-bottom-3x {
    padding-bottom: 24px;
}

.padding-bottom-4x {
    padding-bottom: 32px;
}

.padding-bottom-5x {
    padding-bottom: 40px;
}

.padding-bottom-6x {
    padding-bottom: 48px;
}

.padding-bottom-7x {
    padding-bottom: 56px;
}

.padding-bottom-8x {
    padding-bottom: 64px;
}

// padding left for desktop
.padding-left-zero {
    padding-left: 0;
}

.padding-left-x {
    padding-left: 8px;
}

.padding-left-2x {
    padding-left: 16px;
}

.padding-left-3x {
    padding-left: 24px;
}

.padding-left-4x {
    padding-left: 32px;
}

.padding-left-5x {
    padding-left: 40px;
}

.padding-left-6x {
    padding-left: 48px;
}

.padding-left-7x {
    padding-left: 56px;
}

.padding-left-8x {
    padding-left: 64px;
}

// padding right for desktop
.padding-right-zero {
    padding-right: 0;
}

.padding-right-x {
    padding-right: 8px;
}

.padding-right-2x {
    padding-right: 16px;
}

.padding-right-3x {
    padding-right: 24px;
}

.padding-right-4x {
    padding-right: 32px;
}

.padding-right-5x {
    padding-right: 40px;
}

.padding-right-6x {
    padding-right: 48px;
}

.padding-right-7x {
    padding-right: 56px;
}

.padding-right-8x {
    padding-right: 64px;
}

@include mobile {

    // margin top for mobile
    .m-margin-top-zero {
        margin-top: 0;
    }

    .m-margin-top-x {
        margin-top: 8px;
    }

    .m-margin-top-2x {
        margin-top: 16px;
    }

    .m-margin-top-3x {
        margin-top: 24px;
    }

    .m-margin-top-4x {
        margin-top: 32px;
    }

    .m-margin-top-5x {
        margin-top: 40px;
    }

    .m-margin-top-6x {
        margin-top: 48px;
    }

    .m-margin-top-7x {
        margin-top: 56px;
    }

    .m-margin-top-8x {
        margin-top: 64px;
    }

    // Margin bottom for mobile
    .m-margin-bottom-zero {
        margin-bottom: 0;
    }

    .m-margin-bottom-x {
        margin-bottom: 8px;
    }

    .m-margin-bottom-2x {
        margin-bottom: 16px;
    }

    .m-margin-bottom-3x {
        margin-bottom: 24px;
    }

    .m-margin-bottom-4x {
        margin-bottom: 32px;
    }

    .m-margin-bottom-5x {
        margin-bottom: 40px;
    }

    .m-margin-bottom-6x {
        margin-bottom: 48px;
    }

    .m-margin-bottom-7x {
        margin-bottom: 56px;
    }

    .m-margin-bottom-8x {
        margin-bottom: 64px;
    }

    // Margin left for mobile
    .m-margin-left-zero {
        margin-left: 0;
    }

    .m-margin-left-x {
        margin-left: 8px;
    }

    .m-margin-left-2x {
        margin-left: 16px;
    }

    .m-margin-left-3x {
        margin-left: 24px;
    }

    .m-margin-left-4x {
        margin-left: 32px;
    }

    .m-margin-left-5x {
        margin-left: 40px;
    }

    .m-margin-left-6x {
        margin-left: 48px;
    }

    .m-margin-left-7x {
        margin-left: 56px;
    }

    .m-margin-left-8x {
        margin-left: 64px;
    }


    // Margin right for mobile
    .m-margin-right-zero {
        margin-right: 0;
    }

    .m-margin-right-x {
        margin-right: 8px;
    }

    .m-margin-right-2x {
        margin-right: 16px;
    }

    .m-margin-right-3x {
        margin-right: 24px;
    }

    .m-margin-right-4x {
        margin-right: 32px;
    }

    .m-margin-right-5x {
        margin-right: 40px;
    }

    .m-margin-right-6x {
        margin-right: 48px;
    }

    .m-margin-right-7x {
        margin-right: 56px;
    }

    .m-margin-right-8x {
        margin-right: 64px;
    }

    // Padding top for mobile
    .m-padding-top-zero {
        padding-top: 0;
    }

    .m-padding-top-x {
        padding-top: 8px;
    }

    .m-padding-top-2x {
        padding-top: 16px;
    }

    .m-padding-top-3x {
        padding-top: 24px;
    }

    .m-padding-top-4x {
        padding-top: 32px;
    }

    .m-padding-top-5x {
        padding-top: 40px;
    }

    .m-padding-top-6x {
        padding-top: 48px;
    }

    .m-padding-top-7x {
        padding-top: 56px;
    }

    .m-padding-top-8x {
        padding-top: 64px;
    }

    // padding bottom for mobile
    .m-padding-bottom-zero {
        padding-bottom: 0;
    }

    .m-padding-bottom-x {
        padding-bottom: 8px;
    }

    .m-padding-bottom-2x {
        padding-bottom: 16px;
    }

    .m-padding-bottom-3x {
        padding-bottom: 24px;
    }

    .m-padding-bottom-4x {
        padding-bottom: 32px;
    }

    .m-padding-bottom-5x {
        padding-bottom: 40px;
    }

    .m-padding-bottom-6x {
        padding-bottom: 48px;
    }

    .m-padding-bottom-7x {
        padding-bottom: 56px;
    }

    .m-padding-bottom-8x {
        padding-bottom: 64px;
    }

    // padding left for mobile
    .m-padding-left-zero {
        padding-left: 0;
    }

    .m-padding-left-x {
        padding-left: 8px;
    }

    .m-padding-left-2x {
        padding-left: 16px;
    }

    .m-padding-left-3x {
        padding-left: 24px;
    }

    .m-padding-left-4x {
        padding-left: 32px;
    }

    .m-padding-left-5x {
        padding-left: 40px;
    }

    .m-padding-left-6x {
        padding-left: 48px;
    }

    .m-padding-left-7x {
        padding-left: 56px;
    }

    .m-padding-left-8x {
        padding-left: 64px;
    }

    // padding right for mobile
    .m-padding-right-zero {
        padding-right: 0;
    }

    .m-padding-right-x {
        padding-right: 8px;
    }

    .m-padding-right-2x {
        padding-right: 16px;
    }

    .m-padding-right-3x {
        padding-right: 24px;
    }

    .m-padding-right-4x {
        padding-right: 32px;
    }

    .m-padding-right-5x {
        padding-right: 40px;
    }

    .m-padding-right-6x {
        padding-right: 48px;
    }

    .m-padding-right-7x {
        padding-right: 56px;
    }

    .m-padding-right-8x {
        padding-right: 64px;
    }
}

.background-color {
    background-color: #e6f7ff;
}

.align-center .aem-Grid.aem-Grid--12.aem-Grid--default--12 {
    display: flex;
    align-items: center;
}

.stretch-image .aem-Grid.aem-Grid--12.aem-Grid--default--12 {
    display: flex;
    align-items: stretch;
}

.stretch-image .aem-Grid.aem-Grid--12.aem-Grid--default--12 .mle--image {
    height: 100%;
}

.card-name-wrap {
    overflow: hidden;
    display: -webkit-box;
    -webkit-line-clamp: 2;
    -webkit-box-orient: vertical;
}

.text-decoration-none a {
	text-decoration: none;
}

.plp-container .accordionFilter .collapse.panel.show {
    transition: max-height 0.2s ease-out 0s;
}

a.text-decoration-none {
    color: black;
}

.modal-backdrop:nth-child(2n-1) {
  opacity : 0;
}

